SUBDIRS  = src test

EXTRA_DIST = perl/Smoothing.pm			\
	perl/cmu_ngram_interp			\
	perl/simplified_chinese.wfreq		\
	perl/InputFilter/ICSI.pm		\
	perl/InputFilter/CMU.pm			\
	perl/InputFilter/HUB5.pm		\
	perl/InputFilter/SWB.pm			\
	perl/InputFilter/MS98.pm		\
	perl/InputFilter/ISL.pm			\
	perl/InputFilter/NIST.pm		\
	perl/cmu_ngram_pronounce		\
	perl/unihan.dic				\
	perl/InputFilter.pm			\
	perl/class_tagger.pl			\
	perl/NGramModel.pm			\
	perl/t/test.xml				\
	perl/t/cmu.test.lsn			\
	perl/t/cmu.test.fillermap		\
	perl/t/cmu.test.trs			\
	perl/t/cmu3.test.trs			\
	perl/t/if_cmu.t				\
	perl/t/ngram.t				\
	perl/t/test_interp.xml			\
	perl/t/lminterp.t			\
	perl/t/cmu2.test.lsn			\
	perl/t/cmu.test.vocab			\
	perl/t/lmtrain.t			\
	perl/t/vocab.t				\
	perl/t/context.ccs			\
	perl/t/cmu.files			\
	perl/NGramModel/ARPA.pm			\
	perl/Vocabulary.pm			\
	perl/cmu_build_vocab			\
	perl/unihan_to_sphinx.pl		\
	perl/cmu_ngram_train			\
	perl/NGramFactory.pm			\
	perl/LMTraining.pm			\
	perl/cmu_lm_train			\
	perl/lrSegmenter.perl			\
	perl/cmu_normalize_text			\
	perl/cmu_ngram_test			\
	perl/lm_changecase.pl			\
	perl/Makefile.PL
