AC_INIT(configure.in)
dnl Optionally add support to 32 bits LM
AC_ARG_ENABLE(32bits,
           [  --enable-32bits         Enable 32 bit LM support],
           [CFLAGS="$CFLAGS -DTHIRTYTWOBITS"]
)
AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_CHECK_TOOL(AR,ar)
AC_C_BIGENDIAN
AC_CHECK_LIB(m,log)

#AC_CONFIG_SUBDIRS(src/expat)
AC_OUTPUT([Makefile src/Makefile test/Makefile])
