SUBDIRS = src \
		  model \
		  include \
		  doc \
		  scripts

EXTRA_DIST = sphinx2.spec \
		autogen.sh \
        win32/msdev/SphinxOCX/ReadMe.txt \
        win32/msdev/SphinxOCX/Sphinx.cpp \
        win32/msdev/SphinxOCX/Sphinx.def \
        win32/msdev/SphinxOCX/Sphinx.dep \
        win32/msdev/SphinxOCX/Sphinx.dsp \
        win32/msdev/SphinxOCX/Sphinx.dsw \
        win32/msdev/SphinxOCX/Sphinx.h \
        win32/msdev/SphinxOCX/Sphinx.ico \
        win32/msdev/SphinxOCX/Sphinx.odl \
        win32/msdev/SphinxOCX/Sphinx.rc \
        win32/msdev/SphinxOCX/SphinxArgfileUpdate.cpp \
        win32/msdev/SphinxOCX/SphinxArgfileUpdate.h \
        win32/msdev/SphinxOCX/SphinxBuildLm.cpp \
        win32/msdev/SphinxOCX/SphinxBuildLm.h \
        win32/msdev/SphinxOCX/SphinxConf.cpp \
        win32/msdev/SphinxOCX/SphinxConf.h \
        win32/msdev/SphinxOCX/SphinxCtl.bmp \
        win32/msdev/SphinxOCX/SphinxCtl.cpp \
        win32/msdev/SphinxOCX/SphinxCtl.h \
        win32/msdev/SphinxOCX/SphinxPpg.cpp \
        win32/msdev/SphinxOCX/SphinxPpg.h \
        win32/msdev/SphinxOCX/StdAfx.cpp \
        win32/msdev/SphinxOCX/StdAfx.h \
        win32/msdev/SphinxOCX/mssccprj.scc \
        win32/msdev/SphinxOCX/resource.h \
        win32/msdev/SphinxOCX/vssver.scc \
        win32/msdev/SphinxOCX/Debug \
        win32/msdev/SphinxOCX/Release \
        win32/msdev/libsphinx2/libsphinx2.dsp \
        win32/msdev/libsphinx2/libsphinx2.dsw \
        win32/msdev/libsphinx2ad/libsphinx2ad.dsp \
        win32/msdev/libsphinx2fe/Debug \
        win32/msdev/libsphinx2fe/Release \
        win32/msdev/libsphinx2fe/libsphinx2fe.dsp

## these files were missing
#        win32/msdev/SphinxOCX/Sphinx.aps \
#        win32/msdev/SphinxOCX/Sphinx.clw \
#        win32/msdev/SphinxOCX/Sphinx.mak \
#        win32/msdev/SphinxOCX/Sphinx.ncb \
#        win32/msdev/SphinxOCX/Sphinx.opt \
#        win32/msdev/SphinxOCX/Sphinx.plg \
#        win32/msdev/libsphinx2/libsphinx2.opt \
#        win32/msdev/libsphinx2/libsphinx2.plg \

