SUBDIRS = src \
		  model \
		  include \
		  doc \
		  scripts

EXTRA_DIST = sphinx2.spec \
		autogen.sh \
	win32/batch/sphinx2-align.bat \
	win32/batch/sphinx2-phone.bat \
	win32/batch/sphinx2-simple.bat \
	win32/batch/sphinx2-test.bat \
	win32/msdev/SphinxExamples/SphinxExamples.dsw \
	win32/msdev/SphinxExamples/adpow/adpow.dsp \
	win32/msdev/SphinxExamples/adrec/adrec.dsp \
	win32/msdev/SphinxExamples/adrec/adrec.dsp \
	win32/msdev/SphinxExamples/cont_adseg/cont_adseg.dsp \
	win32/msdev/SphinxExamples/cont_fileseg/cont_fileseg.dsp \
	win32/msdev/SphinxExamples/lm3g2dmp/lm3g2dmp.dsp \
	win32/msdev/SphinxExamples/raw2cep/raw2cep.dsp \
	win32/msdev/SphinxExamples/sphinx2_allphone/sphinx2_allphone.dsp \
	win32/msdev/SphinxExamples/sphinx2_batch/sphinx2_batch.dsp \
	win32/msdev/SphinxExamples/sphinx2_client/sphinx2_client.dsp \
	win32/msdev/SphinxExamples/sphinx2_continuous/sphinx2_continuous.dsp \
	win32/msdev/SphinxExamples/sphinx2_ptt/sphinx2_ptt.dsp \
	win32/msdev/SphinxExamples/sphinx2_client/sphinx2_client.dsp \
	win32/msdev/SphinxExamples/sphinx2_server/sphinx2_server.dsp \
        win32/msdev/SphinxOCX/ReadMe.txt \
        win32/msdev/SphinxOCX/Sphinx.cpp \
        win32/msdev/SphinxOCX/Sphinx.def \
        win32/msdev/SphinxOCX/Sphinx.dep \
        win32/msdev/SphinxOCX/Sphinx.dsp \
        win32/msdev/SphinxOCX/Sphinx.dsw \
        win32/msdev/SphinxOCX/Sphinx.h \
        win32/msdev/SphinxOCX/Sphinx.ico \
        win32/msdev/SphinxOCX/Sphinx.odl \
        win32/msdev/SphinxOCX/Sphinx.rc \
        win32/msdev/SphinxOCX/SphinxArgfileUpdate.cpp \
        win32/msdev/SphinxOCX/SphinxArgfileUpdate.h \
        win32/msdev/SphinxOCX/SphinxBuildLm.cpp \
        win32/msdev/SphinxOCX/SphinxBuildLm.h \
        win32/msdev/SphinxOCX/SphinxConf.cpp \
        win32/msdev/SphinxOCX/SphinxConf.h \
        win32/msdev/SphinxOCX/SphinxCtl.bmp \
        win32/msdev/SphinxOCX/SphinxCtl.cpp \
        win32/msdev/SphinxOCX/SphinxCtl.h \
        win32/msdev/SphinxOCX/SphinxPpg.cpp \
        win32/msdev/SphinxOCX/SphinxPpg.h \
        win32/msdev/SphinxOCX/StdAfx.cpp \
        win32/msdev/SphinxOCX/StdAfx.h \
        win32/msdev/SphinxOCX/mssccprj.scc \
        win32/msdev/SphinxOCX/resource.h \
        win32/msdev/SphinxOCX/vssver.scc \
        win32/msdev/libsphinx2/libsphinx2.dsp \
        win32/msdev/libsphinx2/libsphinx2.dsw \
        win32/msdev/libsphinx2ad/libsphinx2ad.dsp \
        win32/msdev/libsphinx2fe/libsphinx2fe.dsp
