dnl Welcome to the Sphinx automated build system.
dnl try not to hurt yourself ;)

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(sphinx2,0.2)
AM_CONFIG_HEADER(config.h)

CFLAGS=${CFLAGS:--g -O2 -Wall}

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

AC_TYPE_SIGNAL

hmmdata=`ls -1 $srcdir/model/hmm/6k | egrep -v '(Makefile|CVS)'`
hmmdata=`echo $hmmdata`

lmdata=`ls -1 $srcdir/model/lm/turtle/ | egrep -v '(Makefile|CVS)'`
lmdata=`echo $lmdata`

docdata=`ls -1 $srcdir/doc | egrep -v '(Makefile|CVS)'`
docdata=`echo $docdata`

myarch=`uname -m | sed s/i.86/i386/`_`uname -s | tr A-Z a-z`

archfiles=""
archlibs=""

# If it is linux, assume OSS works on it.
if test "x`uname -s | tr A-Z a-z`" = "xlinux"; then
	# echo "boo!"
	archfiles="ad_i386_linux.lo cont_ad_base.lo mulaw_base.lo"
else
	if test "x$myarch" = "xalpha"; then
		archfiles="ad_alpha.lo cont_ad_base.lo mulaw_base.lo"
	else
		if test "x$myarch" = "xsgi"; then
			archfiles="ad_sgi.lo"
		else
			if test "x$myarch" = "xsun4m"; then
				archfiles="ad_sun4m.lo audio_utils_sun4m.lo"
			else
				if test "x$myarch" = "xwin32"; then
					archfiles="play_win32.lo rec_win32.lo"
				else 
					if test "x$myarch" = "xi386_freebsd"; then
						archfiles="ad_i386_freebsd.lo cont_ad_base.lo mulaw_base.lo"
					else
						myarch=`uname`	
						if test "x$myarch" = "xIRIX" || test "x$myarch" = "xIRIX64" ; then
							archfiles="ad_sgi.lo cont_ad_base.lo mulaw_base.lo"
                                                        archlibs="-laudio" 
						else
						   	archfiles=""
						fi
					fi
				fi
			fi
		fi
	fi
fi

archfiles=`echo $archfiles`
archlibs=`echo $archlibs`

AC_PATH_PROG(PERL,perl)
AC_PATH_PROG(CSH,csh)
AC_SUBST(hmmdata)
AC_SUBST(lmdata)
AC_SUBST(docdata)
AC_SUBST(archfiles)
AC_SUBST(archlibs)
AC_SUBST(LIBOBJS)
AC_SUBST(PERL)
AC_SUBST(CSH)

AM_PROG_LIBTOOL

AC_OUTPUT([
Makefile
include/Makefile
src/Makefile
src/libsphinx2/Makefile
src/libsphinx2/include/Makefile
src/examples/Makefile
model/Makefile
model/hmm/Makefile
model/hmm/6k/Makefile
model/lm/Makefile
model/lm/turtle/Makefile
doc/Makefile
scripts/Makefile
scripts/attila-sphinx2.pl
scripts/poe-sphinx-server-demo
scripts/allphone-test.csh
scripts/batch.csh
scripts/sphinx2-demo
scripts/sphinx2-simple
scripts/sphinx2-phone
scripts/sphinx2-test
scripts/stress2sphinx
scripts/sphinx2-align
])

chmod +x scripts/attila-sphinx2.pl
chmod +x scripts/poe-sphinx-server-demo
chmod +x scripts/allphone-test.csh
chmod +x scripts/batch.csh
chmod +x scripts/sphinx2-demo
chmod +x scripts/sphinx2-simple
chmod +x scripts/sphinx2-test
chmod +x scripts/sphinx2-phone
chmod +x scripts/stress2sphinx
chmod +x scripts/sphinx2-align
